# impex

./: CMakeLists.txt  README.md
include/vigra2/: imageinfo.hxx  imageio.hxx  impex.hxx  impexalpha.hxx
include/vigra2/imageio/: codec.hxx  compression.hxx  imageinfo.hxx  impex.hxx  impexalpha.hxx  impexbase.hxx  multi_impex.hxx  sifImport.hxx
src/: auto_file.hxx  bmp.cxx  bmp.hxx  byteorder.hxx  codecmanager.cxx  codecmanager.hxx  compression.cxx  error.hxx  exr.hxx  gif.cxx  gif.hxx  hdr.hxx  imageinfo.cxx  jpeg.cxx  jpeg.hxx  png.hxx  pnm.cxx  pnm.hxx  rgbe.c  sifImport.cxx  sun.cxx  sun.hxx  tiff.cxx  tiff.hxx  viff.hxx  void_vector.hxx
test/: CMakeLists.txt  test_main.cxx
